--- a/index.html
+++ b/index.html
@@ -5,5 +5,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Javascript</title>
 	</head>
-	<body></body>
+	<body>
+		<h1>Hello world</h1>
+		<script src="./src/buoi1/index.js">
+			// console.log("hello world");
+			// console.log("hello world");
+			// var name = "Lam🙄";
+		</script>
+	</body>
 </html>
